# AAI_501_Project

./: CleanCode.ipynb  Initial Hypotheses  README.md  Understand the Problem Statement  notebook.ipynb  pyproject.toml  side_effects_clustering.py
drug_review_analysis/: __init__.py
eda/: drug_reviews_processed.csv  eda.ipynb
